Fixed horionzontal scroll on mobile

--- a/style.css
+++ b/style.css
@@ -87,6 +87,7 @@
      padding: 10px;
      text-align: left;
      width: 100%;
+     word-break: break-word;
 }
  code {
      font-family: inherit;
